# app/Http/Controllers/API/Product/ProductController.php
@@ -142,6 +142,11 @@ class ProductController extends Controller implements HasMiddleware
      *          description="ok",
      *          @OA\JsonContent(ref="#/components/schemas/ApiResponse")
      *      ),
+     *     @OA\Response(
+     *          response="401", 
+     *          description="Error: Unauthorized",
+     *          @OA\JsonContent(ref="#/components/schemas/ApiResponse-2")
+     *      ),
      * )
      */
     // This function just for testing images
